--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -11,11 +11,11 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/fragment_register_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Register"
+            android:text="@string/register"
             android:textStyle="bold"
             android:textSize="35sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -23,76 +23,77 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView2"
-            android:singleLine="true"
-            android:maxLength="25"
+            android:id="@+id/fragment_register_name_title"
             android:layout_width="0dp"
-            android:textStyle="bold"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="30dp"
-            android:text="Name"
-            android:textSize="30sp"
+            android:maxLength="25"
+            android:singleLine="true"
+            android:text="@string/name_title"
+            android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView1" />
+            app:layout_constraintTop_toBottomOf="@+id/fragment_register_title" />
 
 
         <EditText
-            android:id="@+id/fragment_register_displayName"
+            android:id="@+id/fragment_register_display_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:singleLine="true"
-            android:maxLength="25"
             android:ems="10"
-            android:hint="John Doe"
+            android:hint="@string/name_hint"
             android:inputType="textPersonName"
-            android:textSize="30sp"
-            app:layout_constraintEnd_toEndOf="@+id/textView2"
+            android:maxLength="25"
+            android:singleLine="true"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/fragment_register_name_title"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/textView2"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
+            app:layout_constraintStart_toStartOf="@+id/fragment_register_name_title"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_register_name_title"
+            android:importantForAutofill="no" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/fragment_home_latest_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Username"
+            android:text="@string/username"
             android:textStyle="bold"
-            android:textSize="30sp"
-            app:layout_constraintEnd_toEndOf="@+id/fragment_register_displayName"
-            app:layout_constraintStart_toStartOf="@id/fragment_register_displayName"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_register_displayName" />
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="@+id/fragment_register_display_name"
+            app:layout_constraintStart_toStartOf="@id/fragment_register_display_name"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_register_display_name" />
 
         <EditText
             android:id="@+id/fragment_register_username"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:ems="10"
-            android:singleLine="true"
-            android:maxLength="25"
-            android:hint="jhn_doe"
-            android:drawableLeft="@drawable/ic_baseline_account_circle_24"
+            android:drawableStart="@drawable/ic_baseline_account_circle_24"
             android:drawablePadding="10dp"
+            android:ems="10"
+            android:hint="@string/username_hint"
             android:inputType="textPersonName"
-            android:textSize="30sp"
-            app:layout_constraintEnd_toEndOf="@+id/textView3"
+            android:maxLength="25"
+            android:singleLine="true"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/fragment_home_latest_title"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintStart_toStartOf="@+id/fragment_home_latest_title"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_home_latest_title"
+            android:importantForAutofill="no" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/fragment_login_register_suggestion"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Password"
+            android:text="@string/password"
             android:textStyle="bold"
-            android:textSize="30sp"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="@+id/fragment_register_username"
             app:layout_constraintStart_toStartOf="@id/fragment_register_username"
             app:layout_constraintTop_toBottomOf="@+id/fragment_register_username" />
@@ -102,18 +103,20 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:ems="10"
-            android:singleLine="true"
-            android:maxLength="25"
-            android:hint="@string/password_hint"
-            android:drawableLeft="@drawable/ic_baseline_lock_24"
+            android:drawableStart="@drawable/ic_baseline_lock_24"
+            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
             android:drawablePadding="10dp"
+            android:ems="10"
+            android:hint="@string/password_hint"
+            android:importantForAutofill="no"
             android:inputType="textPassword"
-            android:textSize="30sp"
-            app:layout_constraintEnd_toEndOf="@+id/textView4"
+            android:maxLength="25"
+            android:singleLine="true"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/fragment_login_register_suggestion"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/textView4"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            app:layout_constraintStart_toStartOf="@+id/fragment_login_register_suggestion"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_login_register_suggestion" />
 
 
         <TextView
@@ -121,9 +124,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Repeat password"
+            android:text="@string/repeat_password"
             android:textStyle="bold"
-            android:textSize="30sp"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="@+id/fragment_register_password"
             app:layout_constraintStart_toStartOf="@id/fragment_register_password"
             app:layout_constraintTop_toBottomOf="@+id/fragment_register_password" />
@@ -134,14 +137,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:ems="10"
-            android:singleLine="true"
-            android:maxLength="25"
-            android:drawableLeft="@drawable/ic_baseline_lock_24"
+            android:drawableStart="@drawable/ic_baseline_lock_24"
+            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
             android:drawablePadding="10dp"
+            android:ems="10"
             android:hint="@string/password_hint"
+            android:importantForAutofill="no"
             android:inputType="textPassword"
-            android:textSize="30sp"
+            android:maxLength="25"
+            android:singleLine="true"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="@+id/textView5"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/textView5"
@@ -152,9 +157,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Messenger URL"
+            android:text="@string/messenger_url_title"
             android:textStyle="bold"
-            android:textSize="30sp"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="@+id/fragment_register_repeat_password"
             app:layout_constraintStart_toStartOf="@+id/fragment_register_repeat_password"
             app:layout_constraintTop_toBottomOf="@+id/fragment_register_repeat_password" />
@@ -164,26 +169,27 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:ems="10"
-            android:singleLine="true"
-            android:maxLength="25"
-            android:drawableLeft="@drawable/ic_baseline_link_24"
+            android:drawableStart="@drawable/ic_baseline_link_24"
             android:drawablePadding="10dp"
-            android:hint="https://m.me/jhndoe"
-            android:inputType="textPersonName"
-            android:textSize="30sp"
+            android:ems="10"
+            android:hint="@string/messenger_hint"
+            android:inputType="textUri"
+            android:maxLength="25"
+            android:singleLine="true"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="@+id/textView8"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/textView8"
-            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+            app:layout_constraintTop_toBottomOf="@+id/textView8"
+            android:importantForAutofill="no" />
 
         <Button
             android:id="@+id/fragment_register_signup_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20sp"
-            android:text="Sign Up"
-            android:textSize="25sp"
+            android:text="@string/sign_up"
+            android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/fragment_register_messengerURL"
             app:layout_constraintHorizontal_bias="0.498"
@@ -196,10 +202,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Have an account?"
-
+            android:text="@string/suggest_login"
             android:textSize="20sp"
-
             app:layout_constraintEnd_toEndOf="@+id/fragment_register_repeat_password"
             app:layout_constraintTop_toBottomOf="@id/fragment_register_signup_button" />
 
@@ -210,7 +214,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="20dp"
             android:clickable="true"
-            android:text="Login"
+            android:text="@string/login"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
