--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
     tools:context=".view.ui.HomeFragment">
 
     <ImageButton
-        android:id="@+id/fragment_home_settings_imageButton"
+        android:id="@+id/fragment_home_settings_button"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -15,20 +15,19 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_baseline_menu_24"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_home_latest_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:contentDescription="@string/settings_title" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/fragment_home_latest_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-
         android:layout_marginTop="20dp"
-        android:text="Latest"
+        android:text="@string/fragment_home_latest_title"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +46,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_home_latest_title" />
 
     <TextView
         android:id="@+id/fragment_home_greeting_message"
@@ -56,18 +55,17 @@
         android:layout_marginStart="20dp"
         android:ellipsize="end"
         android:singleLine="true"
-        android:text="Welcome Back, user"
         android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/fragment_home_settings_imageButton"
+        app:layout_constraintEnd_toStartOf="@+id/fragment_home_settings_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_home_settings_imageButton" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_home_settings_button" />
 
     <TextView
-        android:id="@+id/fragment_home_no_data_msg_textView"
+        android:id="@+id/fragment_home_no_data_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
-        android:text="No recommendations available."
+        android:text="@string/no_recommendations_available"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
