--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,18 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".view.ui.LoginFragment">
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/fragment_login_logo"
+            android:id="@+id/fragment_login_app_logo"
             android:layout_width="203dp"
             android:layout_height="127dp"
             android:layout_marginTop="40dp"
             android:layout_marginBottom="60dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView2"
+            app:layout_constraintBottom_toTopOf="@+id/fragment_register_name_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -25,66 +24,67 @@
 
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/fragment_register_name_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="90dp"
             android:background="@null"
-            android:text="Username"
-            android:textSize="30sp"
+            android:text="@string/username"
+            android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.4"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_login_logo" />
+            app:layout_constraintTop_toBottomOf="@+id/fragment_login_app_logo" />
 
         <EditText
-            android:id="@+id/fragment_login_username"
+            android:id="@+id/fragment_login_username_edit_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:autofillHints=""
-            android:drawableLeft="@drawable/ic_baseline_account_circle_24"
+            android:drawableStart="@drawable/ic_baseline_account_circle_24"
             android:drawablePadding="10dp"
             android:ems="10"
             android:hint="@string/username_hint"
             android:inputType="textPersonName"
-            android:textSize="30sp"
-            app:layout_constraintEnd_toEndOf="@+id/textView2"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/fragment_register_name_title"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/textView2"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintStart_toStartOf="@+id/fragment_register_name_title"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_register_name_title" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/fragment_home_latest_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:background="@null"
-            android:text="Password"
-            android:textSize="30sp"
+            android:text="@string/password"
+            android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/fragment_login_username"
-            app:layout_constraintLeft_toLeftOf="@id/fragment_login_username"
-            app:layout_constraintStart_toStartOf="@+id/fragment_login_username"
-            app:layout_constraintTop_toBottomOf="@id/fragment_login_username" />
+            app:layout_constraintEnd_toEndOf="@+id/fragment_login_username_edit_text"
+            app:layout_constraintLeft_toLeftOf="@id/fragment_login_username_edit_text"
+            app:layout_constraintStart_toStartOf="@+id/fragment_login_username_edit_text"
+            app:layout_constraintTop_toBottomOf="@id/fragment_login_username_edit_text" />
 
         <EditText
-            android:id="@+id/fragment_login_password"
+            android:id="@+id/fragment_login_password_edit_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:drawableLeft="@drawable/ic_baseline_lock_24"
+            android:drawableStart="@drawable/ic_baseline_lock_24"
+            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
             android:drawablePadding="10dp"
             android:ems="10"
             android:hint="@string/password_hint"
+            android:importantForAutofill="no"
             android:inputType="textPassword"
-            android:textSize="30sp"
-            app:layout_constraintEnd_toEndOf="@+id/textView3"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/fragment_home_latest_title"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintStart_toStartOf="@+id/fragment_home_latest_title"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_home_latest_title" />
 
         <Button
             android:id="@+id/fragment_login_login_button"
@@ -92,36 +92,36 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="70dp"
-            android:text="Login"
-            android:textSize="30sp"
+            android:text="@string/login"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_login_password" />
+            app:layout_constraintTop_toBottomOf="@+id/fragment_login_password_edit_text" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/fragment_login_register_suggestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:text="@string/suggest_registration"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="@+id/fragment_login_password"
+            app:layout_constraintEnd_toEndOf="@+id/fragment_login_password_edit_text"
             app:layout_constraintHorizontal_bias="0.941"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fragment_login_login_button" />
 
         <TextView
-            android:id="@+id/fragment_login_register_instead"
+            android:id="@+id/fragment_login_register_instead_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:clickable="true"
-            android:text="Register"
+            android:text="@string/register"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/textView4"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            app:layout_constraintEnd_toEndOf="@+id/fragment_login_register_suggestion"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_login_register_suggestion" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
