--- a/app/src/main/res/layout/fragment_update_profile.xml
+++ b/app/src/main/res/layout/fragment_update_profile.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.ui.UpdateProfileFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,12 +15,11 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/fragment_update_profile_TextView1"
+            android:id="@+id/fragment_update_profile_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-
-            android:text="Update Profile"
+            android:text="@string/update_profile"
             android:textSize="35sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -36,19 +34,19 @@
             android:src="@drawable/ic_baseline_close_24"
             android:visibility="visible"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/fragment_update_profile_TextView1" />
+            app:layout_constraintTop_toTopOf="@+id/fragment_update_profile_title" />
 
 
         <ImageButton
             android:id="@+id/fragment_update_profile_apply_changes_button"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background="@null"
             android:layout_marginEnd="16dp"
+            android:background="@null"
             android:src="@drawable/ic_baseline_check_24"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/fragment_update_profile_TextView1" />
+            app:layout_constraintTop_toTopOf="@+id/fragment_update_profile_title" />
 
         <de.hdodenhof.circleimageview.CircleImageView
 
@@ -60,14 +58,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_update_profile_TextView1" />
+            app:layout_constraintTop_toBottomOf="@+id/fragment_update_profile_title" />
 
         <Button
             android:id="@+id/fragment_update_profile_change_photo_button"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Change Photo"
+            android:text="@string/change_photo"
             android:textAllCaps="false"
             android:textSize="15sp"
             android:visibility="visible"
@@ -77,59 +75,63 @@
 
 
         <TextView
-            android:id="@+id/fragment_update_profile_TextView2"
+            android:id="@+id/fragment_update_profile_name_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="45dp"
-            android:text="Name"
-            android:textSize="25sp"
+            android:text="@string/name_title"
+            android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fragment_update_profile_change_photo_button" />
 
         <EditText
-            android:id="@+id/fragment_update_profile_editText_name"
+            android:id="@+id/fragment_update_profile_name_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="12dp"
+            android:inputType="textPersonName"
             android:maxLength="25"
             android:singleLine="true"
             android:textIsSelectable="false"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/fragment_update_profile_TextView2"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_update_profile_TextView2" />
+            app:layout_constraintStart_toStartOf="@+id/fragment_update_profile_name_title"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_update_profile_name_title"
+            android:importantForAutofill="no" />
 
 
         <TextView
-            android:id="@+id/fragment_update_profile_TextView3"
+            android:id="@+id/fragment_update_profile_messenger_url_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="45dp"
-            android:text="Messenger URL"
-            android:textSize="25sp"
+            android:text="@string/messenger_url_title"
+            android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fragment_update_profile_editText_name" />
+            app:layout_constraintTop_toBottomOf="@id/fragment_update_profile_name_edit_text" />
 
         <EditText
-            android:id="@+id/fragment_update_profile_editText_URL"
+            android:id="@+id/fragment_update_profile_messenger_url_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="15dp"
+            android:inputType="textUri"
+            android:maxLength="50"
             android:singleLine="true"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/fragment_update_profile_TextView3"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_update_profile_TextView3" />
-
+            app:layout_constraintStart_toStartOf="@+id/fragment_update_profile_messenger_url_title"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_update_profile_messenger_url_title"
+            android:importantForAutofill="no" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
