--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -56,7 +56,7 @@
             android:importantForAutofill="no" />
 
         <TextView
-            android:id="@+id/fragment_home_latest_title"
+            android:id="@+id/fragment_register_username_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -80,14 +80,14 @@
             android:maxLength="25"
             android:singleLine="true"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="@+id/fragment_home_latest_title"
+            app:layout_constraintEnd_toEndOf="@+id/fragment_register_username_title"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/fragment_home_latest_title"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_home_latest_title"
+            app:layout_constraintStart_toStartOf="@+id/fragment_register_username_title"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_register_username_title"
             android:importantForAutofill="no" />
 
         <TextView
-            android:id="@+id/fragment_login_register_suggestion"
+            android:id="@+id/fragment_register_password_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -113,14 +113,14 @@
             android:maxLength="25"
             android:singleLine="true"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="@+id/fragment_login_register_suggestion"
+            app:layout_constraintEnd_toEndOf="@+id/fragment_register_password_title"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/fragment_login_register_suggestion"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_login_register_suggestion" />
+            app:layout_constraintStart_toStartOf="@+id/fragment_register_password_title"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_register_password_title" />
 
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/fragment_register_repeat_password_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -147,13 +147,13 @@
             android:maxLength="25"
             android:singleLine="true"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="@+id/textView5"
+            app:layout_constraintEnd_toEndOf="@+id/fragment_register_repeat_password_title"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/textView5"
-            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+            app:layout_constraintStart_toStartOf="@+id/fragment_register_repeat_password_title"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_register_repeat_password_title" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/fragment_register_messenger_url_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -165,7 +165,7 @@
             app:layout_constraintTop_toBottomOf="@+id/fragment_register_repeat_password" />
 
         <EditText
-            android:id="@+id/fragment_register_messengerURL"
+            android:id="@+id/fragment_register_messenger_url"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -173,15 +173,15 @@
             android:drawablePadding="10dp"
             android:ems="10"
             android:hint="@string/messenger_hint"
+            android:importantForAutofill="no"
             android:inputType="textUri"
             android:maxLength="25"
             android:singleLine="true"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="@+id/textView8"
+            app:layout_constraintEnd_toEndOf="@+id/fragment_register_messenger_url_title"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/textView8"
-            app:layout_constraintTop_toBottomOf="@+id/textView8"
-            android:importantForAutofill="no" />
+            app:layout_constraintStart_toStartOf="@+id/fragment_register_messenger_url_title"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_register_messenger_url_title" />
 
         <Button
             android:id="@+id/fragment_register_signup_button"
@@ -191,14 +191,14 @@
             android:text="@string/sign_up"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/fragment_register_messengerURL"
+            app:layout_constraintEnd_toEndOf="@+id/fragment_register_messenger_url"
             app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="@+id/fragment_register_messengerURL"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_register_messengerURL"
+            app:layout_constraintStart_toStartOf="@+id/fragment_register_messenger_url"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_register_messenger_url"
             app:layout_constraintVertical_bias="0.168" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/fragment_register_login_instead"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -218,8 +218,9 @@
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/textView6"
-            app:layout_constraintTop_toBottomOf="@id/textView6" />
+            app:layout_constraintEnd_toEndOf="@+id/fragment_register_login_instead"
+            app:layout_constraintTop_toBottomOf="@id/fragment_register_login_instead"
+            android:focusable="true" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
